base/keycloak/server/resources/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
      name: GATEWAY_NAME
      sectionName: https-terminated
  hostnames:
    - keycloak.CLUSTER_DOMAIN
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: keycloak-service
          port: 8080
          weight: 1
